gobmkida/g1/location_to_string
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/location_to_string/src/engine/printutils.c:741:6: error: use of undeclared identifier 'init_1'
v1 = init_1; 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/location_to_string/src/engine/printutils.c:742:7: error: use of undeclared identifier 'init_1'
if ( !init_1 ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/location_to_string/src/engine/printutils.c:744:6: error: use of undeclared identifier 'buf_0'
v2 = buf_0; 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/location_to_string/src/engine/printutils.c:751:1: error: use of undeclared identifier 'init_1'
init_1 = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/location_to_string/src/engine/printutils.c:760:9: error: use of undeclared identifier 'buf_0'
return &buf_0[5 * pos]; 
        ^
5 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/location_to_string/src/obj/1/printutils.o] Error 1
